--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ dependencies:
   scoped_model: ^0.3.0
   location: ^1.4.1
   http: ^0.11.3
+  camera: ^0.2.3
+  video_player: ^0.6.4
+  path_provider: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
