--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   camera: ^0.2.3
   video_player: ^0.6.4
   path_provider: ^0.4.1
+  flutter_svg: ^0.5.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
