--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: memories
 description: Memories Photo App
 
-dependencies:
+dependency_overrides:
   flutter:
     sdk: flutter
   location: ^1.4.1
@@ -10,7 +10,15 @@ dependencies:
   video_player: ^0.6.4
   path_provider: ^0.4.1
   flutter_svg: ^0.5.5
+  simple_permissions: ^0.1.9
+  image_picker_saver: ^0.1.0
+  image_picker: ^0.4.10
+  font_awesome_flutter: "^8.0.1"
+  rxdart: "^0.18.0"
+  mime: ^0.9.6
+  chewie: ^0.8.0
 
+  # image_downloader: ^0.9.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
