--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ dependency_overrides:
   location: ^1.4.1
   http: ^0.11.3
   camera: ^0.2.3
-  video_player: ^0.6.4
+  # video_player: ^0.6.5
+  video_player: ^0.10.1+3
   path_provider: ^0.4.1
   flutter_svg: ^0.5.5
   simple_permissions: ^0.1.9
@@ -18,6 +19,13 @@ dependency_overrides:
   mime: ^0.9.6
   chewie: ^0.8.0
   dio: ^2.1.0
+  percent_indicator: ^1.0.14
+  photo_view: ^0.3.1
+  carousel_slider: ^1.3.0
+  # geolocator: ^5.0.1
+
+
+
 
   # image_downloader: ^0.9.1
   # The following adds the Cupertino Icons font to your application.
@@ -67,6 +75,14 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
+        - asset: assets/fonts/Quicksand-Bold.ttf
+        - asset: assets/fonts/Quicksand-Light.ttf
+        - asset: assets/fonts/Quicksand-Medium.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
