--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,15 @@ dependency_overrides:
     sdk: flutter
   location: ^1.4.1
   http: ^0.11.3
-  camera: ^0.2.3
+  # camera: ^0.2.3
+  camera: ^0.5.2+2
   # video_player: ^0.6.5
-  video_player: ^0.10.1+3
+  video_player: ^0.10.1+5
+  # video_player: ^0.10.1+3
   path_provider: ^0.4.1
-  flutter_svg: ^0.5.5
-  simple_permissions: ^0.1.9
+  # flutter_svg: ^0.5.5
+  flutter_svg: ^0.13.1
+  simple_permissions: ^0.1.9  
   image_picker_saver: ^0.1.0
   image_picker: ^0.4.10
   font_awesome_flutter: "^8.0.1"
